    - wired (OSX, BSD)
    - shared (BSD)
   New psutil.swap_memory() provides:
    - total
    - used
    - free
    - percent
    - sin (no. of bytes the system has swapped in from disk (cumulative))
    - sout (no. of bytes the system has swapped out from disk (cumulative))
   All old memory-related functions are deprecated.
   Also two new example scripts were added:  free.py and meminfo.py.

BUGFIXES

 * Issue 298: (OSX - BSD) memory leak in get_num_fds().
 * Issue 299: potential memory leak every time PyList_New(0) is used.
 * Issue 303: (Windows) potential heap corruption in get_num_threads() and
   get_status() Process methods.
 * Issue 305: (BSD) psutil can't compile on FreeBSD 9 due to removal of utmp.h.
 * Issue 306: at C level, errors are not checked when invoking Py* functions
   which create or manipulate Python objects leading to potential memory related
   errors and/or segmentation faults.
 * Issue 307: (BSD) values returned by psutil.network_io_counters() are wrong.
 * Issue 308: (BSD / Windows) psutil.virtmem_usage() wasn't actually returning
   information about swap memory usage as it was supposed to do. It does now.
 * Issue 309: get_open_files() might not return files which can not be accessed
   due to limited permissions. AccessDenied is now raised instead.

API CHANGES

 * psutil.phymem_usage() is deprecated             (use psutil.virtual_memory())
 * psutil.virtmem_usage() is deprecated            (use psutil.swap_memory())
 * psutil.phymem_buffers() on Linux is deprecated  (use psutil.virtual_memory())
 * psutil.cached_phymem() on Linux is deprecated   (use psutil.virtual_memory())
 * (Windows and BSD) psutil.virtmem_usage() now returns information about swap
   memory instead of virtual memory.


0.5.1 - 2012-06-29
------------------

NEW FEATURES

 * Issue 293: (Windows) process executable path is now determined by asking the
   OS instead of being guessed from process cmdline.

BUGFIXES
